--- a/sourse/pug/blocks/sLogos/_sLogos.pug
+++ b/sourse/pug/blocks/sLogos/_sLogos.pug
@@ -8,7 +8,7 @@ mixin sLogos(data)
 			+b.section-title
 				h2 Организаторы и Партнёры
 				
-			+e.title-sub  Организаторы
+			+e.title-sub  Организатор
 			mixin control()
 				.row.d-lg-none
 					.col
