--- a/sourse/pug/blocks/sCases/_sCases.pug
+++ b/sourse/pug/blocks/sCases/_sCases.pug
@@ -143,9 +143,12 @@ mixin sCases(data)
 								.row
 									.col-auto
 										.btn Mobile
-							p Цифровая платформа молодёжного и&nbsp;студенческого туризма студтуризм.рф позволяет студентам бронировать кампусы по&nbsp;всей России. Ежедневно на&nbsp;сайте регистрируются более 29&nbsp;000 новых пользователей. В&nbsp;настоящий момент существует только браузерная версия платформы.
-							p При открытии сайта на&nbsp;мобильном устройстве через браузер, могут некорректно отображаться поля для ввода данных, что неудобно для пользователей и&nbsp;способствует их&nbsp;оттоку с&nbsp;ресурса. Молодые люди не&nbsp;могут использовать платформу по&nbsp;дороге на&nbsp;учебу или работу, в&nbsp;отпуске или в&nbsp;путешествии. Таким образом, многие возможности платформы остаются незамеченными.
-							p Мобильное приложение позволит подавать и&nbsp;оперативно отслеживать статус заявки на&nbsp;бронирование места размещения, участвовать в&nbsp;мероприятиях и&nbsp;просматривать новости. 
+							p Цифровая платформа молодёжного и&nbsp;студенческого туризма студтуризм.рф позволяет студентам бронировать кампусы по&nbsp;всей России. На&nbsp;данный момент на&nbsp;портале зарегистрировано более 29&nbsp;000&nbsp;человек.
+
+							p Существует только браузерная версия цифровой платформы. Полноценно использовать возможности сайта на&nbsp;мобильном устройстве через браузер не&nbsp;представляется возможным, что приносит неудобство для пользователей и&nbsp;способствует быстрому оттоку посетителей с&nbsp;сайта. Молодым людям сложно использовать платформу по&nbsp;дороге на&nbsp;учёбу или работу, в&nbsp;отпуске или в&nbsp;путешествиях. Таким образом, многие возможности платформы остаются незамеченными.
+
+							p Мобильное приложение позволит подавать и&nbsp;оперативно отслеживать статус заявки на&nbsp;бронирование места размещения, участвовать в&nbsp;мероприятиях и&nbsp;просматривать новости.
+
 							p Участникам хакатона предстоит разработать мобильную версию платформы с&nbsp;удобным интерфейсом и&nbsp;функциями push-уведомлений, постингом в&nbsp;социальную сеть&nbsp;VK, геймификацией и&nbsp;различными другими полезными функциями.
 							a(href="https://lk.youthbit.ru/").tabs__content-btn Хочу решить кейс
 						.tabs__case-manager
