--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -16,6 +16,7 @@ include ../blocks/sTeam/_sTeam.pug
 include ../blocks/sPersons/_sPersons.pug
 include ../blocks/sLogos/_sLogos.pug
 include ../blocks/sFAQ/_sFAQ.pug
+include ../blocks/sCoworkings/_sCoworkings.pug
 //- include ../blocks/sCatalog/_sCatalog.pug
 include ../blocks/footer/_footer.pug
 
@@ -40,6 +41,7 @@ block pagecontent
 		+sProcedure()
 		+sCases()
 		+sPrize()
+		//- +sCoworkings
 		+sPersons()
 		+sLogos()
 		+sFAQ()
