--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -41,7 +41,7 @@ block pagecontent
 		+sProcedure()
 		+sCases()
 		+sPrize()
-		//- +sCoworkings
+		+sCoworkings
 		+sPersons()
 		+sLogos()
 		+sFAQ()
