--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -44,10 +44,17 @@ mixin search()
 			button 
 				+icon("search")
 
-mixin page-head(t,...items)
-	+b.page-head
-		- let l = items.length
-		.container
-			+breadcrumb('Главная',...items)
+//- mixin page-head(t,...items)
+//- 	+b.page-head
+//- 		- let l = items.length
+//- 		.container
+//- 			+breadcrumb('Главная',...items)
 
-			h1= t
+//- 			h1= t
+mixin page-head(t)
+	+b.page-head
+		.container
+			+e.title
+				+e.btn-back(href="#")
+					+icon('btn-back')
+				h1!= t
