--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -19,6 +19,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(22,24)*1em;
 }
+.icon-btn-back {
+	font-size:math.div(25,10)*1rem;
+	width: math.div(24,25)*1em;
+}
 .icon-check {
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
