--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
@@ -14,11 +14,24 @@ mixin sBestTeams(data)
 						span Молодёжный туризм
 				.tabs__wrap
 					.tabs__content.active
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci iure suscipit ipsa hic molestiae doloribus soluta atque, voluptate, fugit, repudiandae in non tempora! Magnam dolorum facere dolores fugiat vitae, exercitationem architecto, animi ullam eveniet, labore incidunt ipsa voluptatem! Aspernatur quas, autem impedit a ipsam inventore adipisci est eligendi unde nisi.
+						.tabs__content-wrap
+							.tabs__title
+								h4 Онбординг
+								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
 					.tabs__content
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias excepturi assumenda consectetur dolores molestiae ratione? Aspernatur sunt amet obcaecati, sint facere dignissimos. Repellendus eaque doloribus quia dignissimos a maiores modi.
+						.tabs__content-wrap
+							.tabs__title
+								h4 Онбординг
+								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
 					.tabs__content
-						p Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas qui temporibus natus minus, fugiat tempora! Quo exercitationem natus modi fuga.
+						.tabs__content-wrap
+							.tabs__title
+								h4 Онбординг
+								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
 					.tabs__content
-						p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda iure laboriosam, tenetur nulla eos similique saepe eligendi! Error temporibus placeat, quis repudiandae molestias quisquam eligendi natus exercitationem nemo provident? Doloremque tempora quisquam, saepe ad minima fugit maxime rem error dolorum laboriosam veritatis eveniet at, consequatur amet ab cupiditate perferendis? Ipsa repudiandae eveniet, temporibus sequi dicta cum natus! Quod delectus consequatur excepturi dolorum, doloremque optio modi quaerat, atque facere vel et.
+						.tabs__content-wrap
+							.tabs__title
+								h4 Онбординг
+								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+					
 	// end sBestTeams
