--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.scss
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.scss
@@ -3,26 +3,143 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
-	&__row{
+	&__row {
 		// --bs-gutter-x: #{rem()};
 		// --bs-gutter-y: #{rem()};
-
 	}
-	.section-title{
-		
+	.section-title {
 	}
-	&__col{
-
+	&__col {
 	}
-	&__item{
-
+	&__item {
+	}
+	.tabs {
+		&__caption {
+			@include roww(16px, m);
+			display: none;
+			@include media-breakpoint-up(xl) {
+				display: flex;
+			}
+		}
+		&__content {
+			margin-bottom: rem(16);
+			@include media-breakpoint-up(xl) {
+				margin-bottom: 0;
+			}
+		}
+		&__btn {
+			@extend .btn, .btn-outline-primary;
+			--bs-btn-hover-color: #{$white};
+			--bs-btn-active-color: #{$white};
+			--bs-btn-bg: #{$light};
+			--bs-btn-padding-x: #{rem(24)};
+			--bs-btn-padding-y: #{rem(14)};
+			margin-bottom: rem(27);
+			@include media-breakpoint-up(xxl) {
+				--bs-btn-font-size: #{rem(18)};
+			}
+		}
+		&__btn-accordion {
+			position: relative;
+			--bs-btn-hover-color: #{$white};
+			--bs-btn-active-color: #{$white};
+			--bs-btn-bg: #{$light};
+			--bs-btn-border-color: transparent;
+			padding: rem(16);
+			padding-right: rem(72);
+			// margin-bottom: rem(27);
+			margin-bottom: rem(16);
+			text-align: left;
+			&::after {
+				content: "";
+				@include a-cent(y);
+				position: absolute;
+				right: rem(16);
+				width: rem(16);
+				height: rem(10);
+				background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 0.890625L9 8.89063L17 0.890625' stroke='%23897AD6' stroke-width='2'/%3e%3c/svg%3e ");
+				background-repeat: no-repeat;
+				background-size: contain;
+				@include media-breakpoint-up(md) {
+					right: rem(24);
+				}
+				@include media-breakpoint-up(xl) {
+					right: rem(32);
+				}
+			}
+			@include media-breakpoint-up(xl) {
+				display: none;
+			}
+			&.active {
+				display: none;
+			}
+		}
+		&__content-wrap {
+			padding: rem(16);
+			background: $light;
+			border-radius: $border-radius-lg;
+			@include media-breakpoint-up(md) {
+				padding: rem(24);
+			}
+			@include media-breakpoint-up(xl) {
+				padding: rem(32);
+			}
+		}
+		&__title {
+			margin-bottom: rem(32);
+			h4 {
+				position: relative;
+				color: $primary;
+				margin-bottom: rem(16);
+				width: 100%;
+				padding-right: rem(24);
+				@include media-breakpoint-down(sm) {
+					font-size: rem(20);
+					margin-bottom: rem(16);
+				}
+				&::after {
+					content: "";
+					@include a-cent(y);
+					position: absolute;
+					right: 0;
+					width: rem(16);
+					height: rem(10);
+					background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 0.890625L9 8.89063L17 0.890625' stroke='%23897AD6' stroke-width='2'/%3e%3c/svg%3e ");
+					// background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='18' height='11' viewBox='0 0 18 11' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 1L9 9L17 1' stroke='white' stroke-width='2'/%3e%3c/svg%3e ");
+					background-repeat: no-repeat;
+					background-size: contain;
+					@include media-breakpoint-up(xl) {
+						display: none;
+					}
+				}
+			}
+			p {
+				font-size: rem(15);
+				font-weight: 200;
+				font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
+					"YTAS" 750, "YTDE" -177, "YTFI" 738;
+				@include media-breakpoint-up(lg) {
+					font-size: rem(18);
+				}
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+		}
 	}
 
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sBestTeams
