--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
@@ -18,20 +18,94 @@ mixin sBestTeams(data)
 							.tabs__title
 								h4 Онбординг
 								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							+e.list
+								h4 Победители
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
+									.col-12.col-lg-4
+										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
+									.col-12.col-lg-4
+										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+							+e.list
+								h4 Шортлист
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+									.col-12.col-lg-4
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+									.col-12.col-lg-4
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
 					.tabs__content
 						.tabs__content-wrap
 							.tabs__title
-								h4 Онбординг
+								h4 Дашборд
 								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							+e.list
+								h4 Победители
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
+									.col-12.col-lg-4
+										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
+									.col-12.col-lg-4
+										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+							+e.list
+								h4 Шортлист
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+									.col-12.col-lg-4
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+									.col-12.col-lg-4
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
 					.tabs__content
 						.tabs__content-wrap
 							.tabs__title
-								h4 Онбординг
+								h4 Цифровой помощник
 								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							+e.list
+								h4 Победители
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
+									.col-12.col-lg-4
+										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
+									.col-12.col-lg-4
+										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+							+e.list
+								h4 Шортлист
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+									.col-12.col-lg-4
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+									.col-12.col-lg-4
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
 					.tabs__content
 						.tabs__content-wrap
 							.tabs__title
-								h4 Онбординг
+								h4 Молодёжный туризм
 								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+							+e.list
+								h4 Победители
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
+									.col-12.col-lg-4
+										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
+									.col-12.col-lg-4
+										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+							+e.list
+								h4 Шортлист
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+									.col-12.col-lg-4
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+									.col-12.col-lg-4
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+											
 					
+
 	// end sBestTeams
