--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.scss
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.scss
@@ -4,8 +4,8 @@
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
 	&__row {
-		// --bs-gutter-x: #{rem()};
-		// --bs-gutter-y: #{rem()};
+		--bs-gutter-x: #{rem(16)};
+		--bs-gutter-y: var(--bs-gutter-x);
 	}
 	.section-title {
 	}
@@ -17,6 +17,7 @@
 		&__caption {
 			@include roww(16px, m);
 			display: none;
+			margin-bottom: rem(32);
 			@include media-breakpoint-up(xl) {
 				display: flex;
 			}
@@ -34,7 +35,7 @@
 			--bs-btn-bg: #{$light};
 			--bs-btn-padding-x: #{rem(24)};
 			--bs-btn-padding-y: #{rem(14)};
-			margin-bottom: rem(27);
+			// margin-bottom: rem(32);
 			@include media-breakpoint-up(xxl) {
 				--bs-btn-font-size: #{rem(18)};
 			}
@@ -143,3 +144,118 @@
 	@include media-breakpoint-down(xl) {
 	}
 } // end.sBestTeams
+
+.best-item {
+	background-color: $primary;
+	border-radius: $border-radius-lg;
+	padding: rem(16);
+	@include media-breakpoint-up(sm) {
+		padding: rem(32);
+	}
+	@include media-breakpoint-up(lg) {
+		padding: rem(16);
+	}
+	@include media-breakpoint-up(xl) {
+		padding: rem(32);
+	}
+	&.best-item--first {
+		.best-item__place {
+			background-image: linear-gradient(157.26deg, #F0D800 14.77%, rgba(240, 216, 0, 0.73) 76.9%, #F0D800 95.22%);
+		}
+	}
+	&.best-item--second {
+		.best-item__place {
+			background-image: linear-gradient(157.26deg, #CACACA 14.77%, rgba(202, 202, 202, 0.72) 76.9%, #CACACA 95.22%);
+		}
+	}
+	&.best-item--third {
+		.best-item__place {
+			background-image: linear-gradient(157.26deg, #FFBF48 14.77%, rgba(255, 191, 72, 0.7) 76.9%, #FFBF48 95.22%), linear-gradient(157.26deg, #F09C00 14.77%, rgba(240, 156, 0, 0.63) 76.9%, #F09C00 95.22%), linear-gradient(157.26deg, #F0D800 14.77%, rgba(240, 216, 0, 0.86) 76.9%, #F0D800 95.22%);
+		}
+	}
+	&__head {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: rem(16);
+	}
+	&__place {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		color: $white;
+		padding: rem(4) rem(8);
+		border-radius: rem(8);
+		background-color: $primary;
+
+		span {
+			display: block;
+			font-size: rem(20);
+			line-height: calc(23 / 20);
+			color: inherit;
+		}
+		small {
+			display: block;
+			color: inherit;
+			font-size: rem(10);
+			line-height: 1;
+		}
+	}
+	&__team {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+		small {
+			display: block;
+			margin-bottom: 2px;
+			color: $white;
+			font-weight: 200;
+			font-size: rem(11);
+			font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
+				"YTAS" 750, "YTDE" -177, "YTFI" 738;
+		}
+		h5 {
+			margin-bottom: 0;
+			color: $success;
+		}
+	}
+	ul {
+		list-style: none;
+		margin-bottom: rem(16);
+		&:last-child {
+			margin-bottom: 0;
+		}
+		li {
+			display: flex;
+			flex-direction: column;
+			margin-bottom: rem(16);
+			&:last-child {
+				margin-bottom: 0;
+			}
+			span {
+				display: block;
+				font-size: rem(15);
+				line-height: calc(18 / 15);
+				margin-bottom: 2px;
+				color: $white;
+			}
+			small {
+				color: #d0cce4;
+				display: block;
+				font-weight: 200;
+				font-size: rem(11);
+				font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
+					"YTAS" 750, "YTDE" -177, "YTFI" 738;
+			}
+		}
+	}
+	&__more {
+		display: inline-block;
+		font-size: rem(15);
+		line-height: calc(18 / 15);
+		color: $success;
+		&:hover {
+			color: $white;
+		}
+	}
+}
