--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
@@ -31,11 +31,11 @@ mixin sBestTeams(data)
 								h4 Шортлист
 								+e.row.row
 									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 					.tabs__content
 						.tabs__content-wrap
 							.tabs__title
@@ -54,11 +54,11 @@ mixin sBestTeams(data)
 								h4 Шортлист
 								+e.row.row
 									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 					.tabs__content
 						.tabs__content-wrap
 							.tabs__title
@@ -77,11 +77,11 @@ mixin sBestTeams(data)
 								h4 Шортлист
 								+e.row.row
 									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 					.tabs__content
 						.tabs__content-wrap
 							.tabs__title
@@ -100,12 +100,10 @@ mixin sBestTeams(data)
 								h4 Шортлист
 								+e.row.row
 									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`)
-											
-					
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 
 	// end sBestTeams
