--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.pug
@@ -4,43 +4,20 @@ mixin sBestTeams(data)
 		.container
 			.tabs
 				.tabs__caption
-					.tabs__btn.active
-						span Онбординг
 					.tabs__btn
 						span Дашборд
-					.tabs__btn
+					.tabs__btn.active
 						span Цифровой помощник
+					.tabs__btn
+						span Онбординг
 					.tabs__btn
 						span Молодёжный туризм
 				.tabs__wrap
-					.tabs__content.active
-						.tabs__content-wrap
-							.tabs__title
-								h4 Онбординг
-								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
-							+e.list
-								h4 Победители
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
-									.col-12.col-lg-4
-										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
-									.col-12.col-lg-4
-										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
-							+e.list
-								h4 Шортлист
-								+e.row.row
-									.col-12.col-lg-4
-										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-									.col-12.col-lg-4
-										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 					.tabs__content
 						.tabs__content-wrap
 							.tabs__title
 								h4 Дашборд
-								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+								p Разработай дашборд – инструмент анализа и визуализации данных,поступающих от субъектов молодёжной политики России
 							+e.list
 								h4 Победители
 								+e.row.row
@@ -59,7 +36,7 @@ mixin sBestTeams(data)
 										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
 									.col-12.col-lg-4
 										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
-					.tabs__content
+					.tabs__content.active
 						.tabs__content-wrap
 							.tabs__title
 								h4 Цифровой помощник
@@ -85,8 +62,31 @@ mixin sBestTeams(data)
 					.tabs__content
 						.tabs__content-wrap
 							.tabs__title
+								h4 Онбординг
+								p Разработай digital-систему для онбординга новых сотрудниковс элементами геймификации
+							+e.list
+								h4 Победители
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`I`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--first
+									.col-12.col-lg-4
+										+sBestTeamsItem(`II`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--second
+									.col-12.col-lg-4
+										+sBestTeamsItem(`III`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--third
+							+e.list
+								h4 Шортлист
+								+e.row.row
+									.col-12.col-lg-4
+										+sBestTeamsItem(`IV`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
+									.col-12.col-lg-4
+										+sBestTeamsItem(`V`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
+									.col-12.col-lg-4
+										+sBestTeamsItem(`VI`, `Digital Sith`, `Ярославская область`, `Ярославский Валентин`, `Констанинвоский Александр`, `Яровая Валентина`, `Кипин Максим`, `Яровая Валентина`).--light
+					.tabs__content
+						.tabs__content-wrap
+							.tabs__title
 								h4 Молодёжный туризм
-								p Создай онлайн-помощника по&nbsp;заполнению грантовой заявки для молодёжи России
+								p Разработай мобильное приложение для сайта студтуризм.рф
 							+e.list
 								h4 Победители
 								+e.row.row
