--- a/sourse/pug/blocks/sBestTeams/_sBestTeams.scss
+++ b/sourse/pug/blocks/sBestTeams/_sBestTeams.scss
@@ -11,12 +11,12 @@
 		--bs-gutter-x: #{rem(16)};
 		--bs-gutter-y: var(--bs-gutter-x);
 	}
-	.section-title {
-	}
-	&__col {
-	}
-	&__item {
-	}
+	// .section-title {
+	// }
+	// &__col {
+	// }
+	// &__item {
+	// }
 	&__list {
 		margin-bottom: rem(32);
 		&:last-child {
