--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -76,7 +76,7 @@ mixin sBestTeamsItem(place, team, city, ...names)
 					span!= name
 					small!= city
 		if place
-			+e.more(href="#") Подробнее
+			+e.more(href="#" data-src="modal-call" data-fancybox="modal") Подробнее
 
 
 		
