--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -59,6 +59,14 @@
 	font-size:math.div(40,10)*1rem;
 	width: math.div(40,40)*1em;
 }
+.icon-presentation {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(16,16)*1em;
+}
+.icon-repository {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(16,16)*1em;
+}
 .icon-sCases-project {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
