--- a/sourse/pug/blocks/modal/_modal.scss
+++ b/sourse/pug/blocks/modal/_modal.scss
@@ -6,14 +6,22 @@
 	padding: 0;
 	max-width: 100%;
 }
+
 .modal-win {
 	// display: block;
-	background-color: #fff;
+	background-color: $light;
+	border-radius: $border-radius-lg;
 	max-width: 100%;
 	position: relative;
-	width: rem(1500);
-	// min-height: 100%; 
-	padding: 40px;
+	width: rem(1314);
+	// min-height: 100%;
+	padding: rem(24) rem(16);
+	@include media-breakpoint-up(sm) {
+		padding: rem(24);
+	}
+	@include media-breakpoint-up(lg) {
+		padding: rem(32);
+	}
 
 	.modal-content {
 		// max-width: 485px;
@@ -24,6 +32,114 @@
 		color: $primary;
 		font-size: 40px;
 		font-weight: 100;
+	}
+	.winner {
+		&__title {
+			font-size: rem(24);
+			line-height: calc(28 / 24);
+			margin-bottom: rem(16);
+			color: $primary;
+			@include media-breakpoint-up(sm) {
+				margin-bottom: rem(24);
+			}
+		}
+		&__row {
+			--bs-gutter-y: #{rem(16)};
+			@include media-breakpoint-up(sm) {
+				--bs-gutter-y: #{rem(24)};
+			}
+		}
+		&__col {
+			@include media-breakpoint-up(xl) {
+				max-width: 36%;
+			}
+		}
+		&__btn-wrap {
+			.row {
+				--bs-gutter-y: var(--bs-gutter-x);
+				--bs-gutter-x: #{rem(16)};
+				@include media-breakpoint-up(lg) {
+					--bs-gutter-x: #{rem(24)};
+				}
+			}
+			.winner__btn {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				border-radius: rem(32);
+				font-size: rem(15);
+				line-height: calc(18 / 15);
+				--bs-btn-hover-color: #fff;
+				--bs-btn-active-color: #fff;
+				--bs-btn-padding-x: #{rem(24)};
+				--bs-btn-padding-y: #{rem(15)};
+				
+				.icon {
+					flex-shrink: 0;
+					font-size: rem(16);
+					margin-right: rem(8);
+				}
+			}
+		}
+
+		&__content {
+			.winner__title {
+				display: none;
+				@include media-breakpoint-up(xl) {
+					display: block;
+				}
+			}
+			ul {
+				list-style: none;
+				margin-bottom: rem(16);
+				@include media-breakpoint-up(sm) {
+					margin-bottom: rem(24);
+				}
+				&:last-child {
+					margin-bottom: 0;
+				}
+				li {
+					margin-bottom: rem(16);
+					@include media-breakpoint-up(sm) {
+						margin-bottom: rem(24);
+					}
+					&:last-child {
+						margin-bottom: 0;
+					}
+					small {
+						display: block;
+						color: #000;
+						margin-bottom: rem(8);
+						font-size: rem(15);
+						line-height: calc(18 / 15);
+						font-weight: 471;
+						font-variation-settings: "wdth" 134, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433,
+							"YTUC" 649, "YTAS" 750, "YTDE" -177, "YTFI" 738, "opsz" 8;
+					}
+					p {
+						font-weight: 200;
+						font-size: rem(15);
+						margin-bottom: rem(16);
+						&:last-child {
+							margin-bottom: 0;
+						}
+					}
+				}
+			}
+		}
+		.best-item {
+			max-width: 100%;
+			padding: rem(24) rem(16);
+			@include media-breakpoint-up(sm) {
+				padding: rem(24);
+			}
+			@include media-breakpoint-up(lg) {
+				padding: rem(32);
+			}
+			@include media-breakpoint-up(xl) {
+				width: rem(420);
+			}
+		}
 	}
 }
 
@@ -50,7 +166,7 @@ a {
 	top: 0;
 	text-decoration: none;
 	text-align: center;
-	opacity: .65; // padding: 0 0 18px 10px;
+	opacity: 0.65; // padding: 0 0 18px 10px;
 	// color: #fff;
 	font-style: normal;
 	font-size: 28px;
@@ -101,76 +217,86 @@ a {
 	}
 }
 
+//
+@include media-breakpoint-up(xl) {
+}
 
-// 
-@include media-breakpoint-up(xl) {}
+@include media-breakpoint-up(lg) {
+}
 
-@include media-breakpoint-up(lg) {}
+@include media-breakpoint-up(md) {
+}
 
-@include media-breakpoint-up(md) {}
+@include media-breakpoint-up(sm) {
+}
 
-@include media-breakpoint-up(sm) {}
+@include media-breakpoint-up(xs) {
+}
 
-@include media-breakpoint-up(xs) {}
+//
+@include media-breakpoint-between(md, xl) {
+}
 
-// 
-@include media-breakpoint-between(md, xl) {}
+//
+@include media-breakpoint-only(xs) {
+}
 
-// 
-@include media-breakpoint-only(xs) {}
+@include media-breakpoint-only(sm) {
+}
 
-@include media-breakpoint-only(sm) {}
+@include media-breakpoint-only(md) {
+}
 
-@include media-breakpoint-only(md) {}
+@include media-breakpoint-only(lg) {
+}
 
-@include media-breakpoint-only(lg) {}
+@include media-breakpoint-only(xl) {
+}
 
-@include media-breakpoint-only(xl) {}
+//
+@include media-breakpoint-down(xl) {
+}
 
-// 
-@include media-breakpoint-down(xl) {}
+@include media-breakpoint-down(lg) {
+}
 
-@include media-breakpoint-down(lg) {}
+@include media-breakpoint-down(md) {
+}
 
-@include media-breakpoint-down(md) {}
-
-@include media-breakpoint-down(sm) {}
+@include media-breakpoint-down(sm) {
+}
 
 @include media-breakpoint-down(xs) {
-
 	.fancybox__container {
 		width: 100% !important;
-		min-height: 100%; 
+		min-height: 100%;
 		transform: none !important;
 	}
 }
 
-
-
 .fancybox-throwOutUp {
-  animation: 0.25s ease both fancybox-throwOutUp;
+	animation: 0.25s ease both fancybox-throwOutUp;
 }
 
 .fancybox-throwOutDown {
-  animation: 0.25s ease both fancybox-throwOutDown;
+	animation: 0.25s ease both fancybox-throwOutDown;
 }
 
 @keyframes fancybox-throwOutUp {
-  from {
-    transform: translate3d(0, -5%, 0);
-    opacity: 0;
-  }
-	
-  to {
-    transform: translate3d(0, 0, 0);
-    opacity: 1;
-  }
+	from {
+		transform: translate3d(0, -5%, 0);
+		opacity: 0;
+	}
 
+	to {
+		transform: translate3d(0, 0, 0);
+		opacity: 1;
+	}
 }
 
 @keyframes fancybox-throwOutDown {
-  to {
-    transform: translate3d(0, 10%, 0);
-    opacity: 0;
-  }
+	to {
+		transform: translate3d(0, 10%, 0);
+		opacity: 0;
+	}
 }
