--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -64,7 +64,8 @@ body {
 		height: 100%;
 		@include mt;
 		// background-color: $body-color;
-		background-color: rgba($primary, 0.8);
+		background-color: rgba(#9384e0, 0.8);
+		// background-color: rgba($primary, 0.8);
 		// backdrop-filter: blur(5px);
 		opacity: 0;
 		z-index: -1;
@@ -494,6 +495,16 @@ iframe {
 
 .fancybox__content :focus:not(.carousel__button.is-close) {
 	outline: none !important;
+}
+
+.fancybox__slide {
+	padding: rem(60) rem(16) rem(30);
+	@include media-breakpoint-up(md) {
+		padding: rem(60) rem(24);
+	}
+	@include media-breakpoint-up(lg) {
+		padding: rem(60) rem(100);
+	}
 }
 
 .form-switch,
