--- a/sourse/sass/_root.scss
+++ b/sourse/sass/_root.scss
@@ -1,10 +1,8 @@
-
 :root {
 	--animate-delay: 1.2s;
 	--bs-body-font-size: #{$em-base};
 
 	@include media-breakpoint-up(md) {
-		
 		--sPT: #{rem(80)};
 		--sPB: #{rem(80)};
 		--sTPB: #{rem(40)};
@@ -13,70 +11,97 @@
 		--bs-body-font-size: #{$em-base};
 	}
 
-	--sPT: #{rem(80 * .5)};
-	--sPB: #{rem(80 * .5)};
-	--sTPB: #{rem(40 * .5)};
-
+	--sPT: #{rem(80 * 0.5)};
+	--sPB: #{rem(80 * 0.5)};
+	--sTPB: #{rem(40 * 0.5)};
 
 	--fancybox-content-color: var(--bs-body-color);
-		--swiperArrowSize: #{rem(16)};
-		--swiperArrowPosition: calc(-1 * var(--swiperArrowSize) / 2);
-		--swiperBorderColorDef: transparent;
-		--swiperColorDef: var(--bs-primary);
-		--swiperBgDef: #ffffff;
-	
-		--swiperBorderColorDefHover: var(--bs-primary);
-		--swiperColorDefHover: var(--bs-primary);
-		--swiperBgDefHover: #ffffff;
+	--swiperArrowSize: #{rem(16)};
+	--swiperArrowPosition: calc(-1 * var(--swiperArrowSize) / 2);
+	--swiperBorderColorDef: transparent;
+	--swiperColorDef: var(--bs-primary);
+	--swiperBgDef: #ffffff;
 
+	--swiperBorderColorDefHover: var(--bs-primary);
+	--swiperColorDefHover: var(--bs-primary);
+	--swiperBgDefHover: #ffffff;
 
-	--fancybox-bg: rgba(24, 24, 27, .77);
+	--fancybox-bg: #{rgba(#9384e0, 0.8)};
 
+	//  --carousel-button-width: 48px;
+	//  --carousel-button-height: 48px;
 
+	//  --carousel-button-svg-width: 24px;
+	//  --carousel-button-svg-height: 24px;
 
-	  //  --carousel-button-width: 48px;
-	  //  --carousel-button-height: 48px;
+	//  --carousel-button-svg-stroke-width: 2.5;
+	//  --carousel-button-svg-filter: drop-shadow(1px 1px 1px rgba(0, 0, 0/ 0.4));
+	.fancybox__slide {
+		.carousel__button.is-close {
+			--carousel-button-width: #{rem(36)};
+			--carousel-button-height: #{rem(36)};
 
-	  //  --carousel-button-svg-width: 24px;
-	  //  --carousel-button-svg-height: 24px;
+			--carousel-button-svg-width: #{rem(16)};
+			--carousel-button-svg-height: #{rem(16)};
 
-	  //  --carousel-button-svg-stroke-width: 2.5;
-	  //  --carousel-button-svg-filter: drop-shadow(1px 1px 1px rgba(0, 0, 0/ 0.4));
+			--carousel-button-bg: #{$success};
+			--carousel-button-border-radius: 4px;
+
+			--carousel-button-svg-filter: none;
+			--fancybox-color: #000;
+			top: rem(-47);
+			//  --carousel-button-svg-stroke-width: 2.5;
+		}
+	}
 }
 
-@include media-breakpoint-up(xl) {}
+@include media-breakpoint-up(xl) {
+}
 
-@include media-breakpoint-up(lg) {}
+@include media-breakpoint-up(lg) {
+}
 
-@include media-breakpoint-up(md) {}
+@include media-breakpoint-up(md) {
+}
 
-@include media-breakpoint-up(sm) {}
+@include media-breakpoint-up(sm) {
+}
 
-@include media-breakpoint-up(xs) {}
-
-//
-@include media-breakpoint-between(md, xl) {}
-
-
-//
-@include media-breakpoint-only(xs) {}
-
-@include media-breakpoint-only(sm) {}
-
-@include media-breakpoint-only(md) {}
-
-@include media-breakpoint-only(lg) {}
-
-@include media-breakpoint-only(xl) {}
+@include media-breakpoint-up(xs) {
+}
 
 //
-@include media-breakpoint-down(xl) {}
+@include media-breakpoint-between(md, xl) {
+}
 
-@include media-breakpoint-down(lg) {}
+//
+@include media-breakpoint-only(xs) {
+}
 
-@include media-breakpoint-down(md) {}
+@include media-breakpoint-only(sm) {
+}
 
-@include media-breakpoint-down(sm) {}
+@include media-breakpoint-only(md) {
+}
 
-@include media-breakpoint-down(xs) {}
+@include media-breakpoint-only(lg) {
+}
 
+@include media-breakpoint-only(xl) {
+}
+
+//
+@include media-breakpoint-down(xl) {
+}
+
+@include media-breakpoint-down(lg) {
+}
+
+@include media-breakpoint-down(md) {
+}
+
+@include media-breakpoint-down(sm) {
+}
+
+@include media-breakpoint-down(xs) {
+}
