--- a/sourse/pug/blocks/sPersons/_sPersons.pug
+++ b/sourse/pug/blocks/sPersons/_sPersons.pug
@@ -32,7 +32,7 @@ mixin sPersons(data)
 			+e.title Трекеры
 			+e.slider--js.swiper#tracker
 				.swiper-wrapper
-					- for (var x = 0; x < 2; x++)
+					//- - for (var x = 0; x < 2; x++)
 						+slide('Виктор Сожможнов','Следует отметить, что высококачественный прототип будущего проекта способствует')
 						+slide('Виктория Складчинкова','Прототип будущего проекта способствует')
 						+slide('Ким Самаджокис','Следует отметить')
