--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -2,7 +2,8 @@
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
-	@include mt;
+	// @include mt;
+	transition: background-color 0.3s ease-in-out, padding-top 0.3s ease-in-out;
 	position: fixed;
 	width: 100%;
 	z-index: 999;
