edit top-nav & headerBlock

--- a/sourse/pug/blocks/headerBlock/_headerBlock.pug
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.pug
@@ -14,6 +14,6 @@ mixin headerBlock()
 					li Соревнуйся за&nbsp;призовой фонд в&nbsp;1&nbsp;миллион рублей и&nbsp;захватывающее путешествие по&nbsp;России
 					li Участвуй онлайн из&nbsp;любой точки страны
 					li Приходи кодить на&nbsp;офлайн-площадку
-					li Регистрируйся до&nbsp;14&nbsp;февраля
-				+e.btn.btn.btn-success(href="https://lk.youthbit.ru/") Регистрация/Войти
+					//- li Регистрируйся до&nbsp;14&nbsp;февраля
+				+e.btn.btn.btn-success.disabled(href="https://lk.youthbit.ru/") Регистрация завершена
 	// end headerBlock
