--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -81,7 +81,7 @@
 			left: 100%;
 			// top: rem(-30);
 			width: rem(409);
-			margin-top: 0;
+			margin-top: -5%;
 		}
 		@include media-breakpoint-up(xxl) {
 			left: 123%;
@@ -150,6 +150,10 @@
 	}
 	&__btn {
 		padding: em(12) em(22);
+		--bs-btn-disabled-bg: #BBB5DB;
+		--bs-btn-disabled-border-color: #BBB5DB;
+		--bs-btn-disabled-color: #000;
+		--bs-btn-disabled-opacity: 1;
 	}
 
 	@include media-breakpoint-up(xl) {
