--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -31,9 +31,9 @@
 		@include media-breakpoint-up(xl) {
 			align-items: center;
 		}
-		@include media-breakpoint-only(xl) {
-			--bs-gutter-x: #{rem(16)};
-		}
+		// @include media-breakpoint-only(xl) {
+		// 	--bs-gutter-x: #{rem(16)};
+		// }
 	}
 	.soc {
 		@include media-breakpoint-down(xl) {
@@ -60,12 +60,12 @@
 			height: auto;
 		}
 	}
-	&__btn {
-		@include media-breakpoint-down(xxl) {
-			--bs-btn-padding-x: 0.5rem;
-			--bs-btn-font-size: 0.7888888889rem;
-		}
-	}
+	// &__btn {
+	// 	@include media-breakpoint-down(xxl) {
+	// 		--bs-btn-padding-x: 0.5rem;
+	// 		--bs-btn-font-size: 0.7888888889rem;
+	// 	}
+	// }
 	@include media-breakpoint-up(md) {
 	}
 
