--- a/sourse/pug/blocks/sTeam/_sTeam.pug
+++ b/sourse/pug/blocks/sTeam/_sTeam.pug
@@ -13,5 +13,5 @@ mixin sTeam(data)
 					li молодёжь из любой точки России
 					li от 18 до 35 лет
 					li специалисты по IT и дизайну, студенты вузов
-				+e.btn(href="https://lk.youthbit.ru/").btn.btn-success Это про меня!
+				//- +e.btn(href="https://lk.youthbit.ru/").btn.btn-success Это про меня!
 	// end sTeam
