--- a/sourse/pug/blocks/sCases/_sCases.scss
+++ b/sourse/pug/blocks/sCases/_sCases.scss
@@ -96,7 +96,7 @@
 			p {
 				font-weight: 200;
 				font-size: rem(15);
-				flex-grow: 1;
+				// flex-grow: 1;
 				font-variation-settings: "opsz" 8, "GRAD" 0, "slnt" 0, "XTRA" 497, "XOPQ" 96, "YOPQ" 91, "YTLC" 433, "YTUC" 649,
 					"YTAS" 750, "YTDE" -177, "YTFI" 738;
 				margin-bottom: 1em;
