--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -8,7 +8,7 @@ include ../blocks/headerBlock/_headerBlock.pug
 //- include ../blocks/sContent/_sContent.pug
  
 include ../blocks/sContact/_sContact.pug
-include ../blocks/sProcedure/_sProcedure.pug
+//- include ../blocks/sProcedure/_sProcedure.pug
 include ../blocks/sCases/_sCases.pug
 include ../blocks/sPrize/_sPrize.pug
 include ../blocks/sAbout/_sAbout.pug
@@ -38,7 +38,7 @@ block pagecontent
 		+headerBlock
 		+sAbout()
 		+sTeam()
-		+sProcedure()
+		//- +sProcedure()
 		+sCases()
 		+sPrize()
 		+sCoworkings
